# rstd

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix  vec.md
rsrc/: option.rs  result.rs  vec.rs
src/: containers.hh  hashmap.hh  huge_page_allocator.hh  list.hh  macros.hh  main.cc  map.hh  option.hh  result.hh  schema.hh  tsdb.hh  types.hh  utils.hh  vector.hh
